--- a/index.html
+++ b/index.html
@@ -1,7 +1,54 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Site em desenvolvimento</h1>
-<p></p>
-</body>
+<html lang="en">
+
+  <head>
+
+    <meta charset="utf-8">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Fábio Morais</title>
+
+ 
+    <!-- Custom styles for this template -->
+    <link href="css/creative.css" rel="stylesheet">
+
+  </head>
+
+  <body id="page-top">
+
+    <!-- Navigation -->
+    <nav id="mainNav">
+		<div class="container">
+			<a id="name" href="#page-top">Fábio Morais</a>
+			<div id="navbarOptions">
+			  <ul>
+				<li class="nav-item">
+				  <a id="about" href="#about">About</a>
+				</li> 
+				<li class="nav-item">
+					<a id="skills" href="#hardskills">Skills</a>
+				  </li>
+				<li class="nav-item">
+				  <a id="contact" href="#contact">Contact</a>
+				</li>
+			  </ul>
+        </div>
+      </div>
+    </nav>
+
+    <header class="introduction">
+        <div class="myPhoto">
+			<img src="https://media.licdn.com/dms/image/C5603AQF6mbjlZ28Z-Q/profile-displayphoto-shrink_200_200/0?e=1560988800&v=beta&t=Ba5FbA4qEPNPIVmSW0E0MxSdos85ubs3lrPl9Mhrn4w" alt="Smiley face" height="250" width="250" id="myface"> 
+        </div>
+        <div class="text">
+            <p id="text-faded mb-5 text-justify">My name is Fábio Morais from Porto Portugal.<br> I'm studying the Master's degree in Electrical and Computer Engineering, major area of Automation. <br></p>
+            <a id="btn" href="#about">Find Out More</a>
+        </div>
+    </header>
+
+
+
+  </body>
+
 </html>
