--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
 
      Custom scripts for this template 
      -->
-	<script src="js/creative.min.js"></script>
-	<script src="js/creative.js"></script>
+	<script src="./js/creative.min.js"></script>
+	<script src="./js/creative.js"></script>
   </body>
 
 </html>
