--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <head>
 
     <meta charset="utf-8">
- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <title>Fábio Morais</title>
+	<link rel="shortcut icon" type="image/x-icon" href="./img/icon.png" />
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -217,6 +218,7 @@
                 <p class="text-muted mb-0">You have to make your websites with love these days!</p>
               </div>
             </div>
+			
             </div>
           </div>
         </div>
