--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			</div>
 		</div>
     </nav>
-
+						<!-- DESCRIPTION -->
     <header class="masthead text-justified text-white d-flex">
       <div class="container my-auto">
         <div class="row">
@@ -185,45 +185,153 @@
           </div>
         </div>
         <div class="container">
-          <div class="row">
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box mt-5 mx-auto pointer" id="pointerGroup" data-toggle="collapse" data-target="#demo">
-					<i class="fas fa-4x fa-code text-primary mb-3 sr-icons" ></i>
-					<h3 class="mb-3" id="pointerText">Software</h3>
-                </div>
-			    <div id="demo" class="collapse">
-					<div id="myProgress">
-					  <div id="myBar"></div>
+            <div class="row">
+				<!-- Software -->
+				<div class="col-lg-3 col-md-6 text-center">
+					<div onclick="moveS()" class="service-box mt-5 mx-auto pointer" id="pointerSoftware" data-toggle="collapse" data-target="#Software">
+						<i class="fas fa-4x fa-code text-primary mb-3 sr-icons" ></i>
+						<h3 class="mb-3" id="TextSoftware">Software</h3>
+					</div>
+					<div id="Software" class="collapse">
+						<div class="container">
+							<div class="row">
+								<div class="col-sm">
+									<h5 class="mb-3">C/C++</h3>
+								</div>
+								<div class="col-sm">
+									<div class="progress myProgressS" >
+										<div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar"
+  aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%"></div>
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-sm">
+									<h5 class="mb-3">Python</h3>
+								</div>
+								<div class="col-sm">
+									<div class="progress myProgressS" >
+										<div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar"
+  aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%"></div>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
-              <div class="service-box mt-5 mx-auto">
-                <i class="fas fa-4x fa-laptop-code text-primary mb-3 sr-icons"></i>
-                <h3 class="mb-3">WebDev</h3>
-                <p class="text-muted mb-0">You can use this theme as is, or you can make changes!</p>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
-              <div class="service-box mt-5 mx-auto">
-                <i class="fas fa-4x fa-plug text-primary mb-3 sr-icons"></i>
-                <h3 class="mb-3">Eletric Engineering</h3>
-                <p class="text-muted mb-0">We update dependencies to keep things fresh.</p>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center ">
-              <div class="service-box mt-5 mx-auto">
-                <i class="fas fa-4x fa-microchip text-primary mb-3 sr-icons"></i>
-                <h3 class="mb-3">Embedded Systems</h3>
-                <p class="text-muted mb-0">You have to make your websites with love these days!</p>
-              </div>
-            </div>
-			
+				<!-- WebDev -->
+				<div class="col-lg-3 col-md-6 text-center">
+					<div onclick="moveW()" class="service-box mt-5 mx-auto pointer" id="pointerWebDev" data-toggle="collapse" data-target="#WebDev">
+						<i class="fas fa-4x fa-laptop-code text-primary mb-3 sr-icons"></i>
+						<h3 class="mb-3" id="textWebDev">WebDev</h3>
+					</div>
+					<div id="WebDev" class="collapse">
+						<div class="container">
+							<div class="row">
+								<div class="col-sm">
+									<h5 class="mb-3">HTML</h3>
+								</div>
+								<div class="col-sm">
+									<div class="progress myProgressW" >
+										<div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%"></div>
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-sm">
+									<h5 class="mb-3">CSS</h3>
+								</div>
+								<div class="col-sm">
+									<div class="progress myProgressW" >
+										<div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%"></div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Eletric Engineering -->
+				<div class="col-lg-3 col-md-6 text-center">
+				   <div onclick="moveEL()" class="service-box mt-5 mx-auto pointer" id="pointerEletric" data-toggle="collapse" data-target="#Eletric">
+					<i class="fas fa-4x fa-plug text-primary mb-3 sr-icons"></i>
+					<h3 class="mb-3" id="textEletric">Eletric Engineering</h3>
+				  </div>
+					<div id="Eletric" class="collapse">
+						<div class="container">
+							<div class="row">
+								<div class="col-sm">
+									<h5 class="mb-3">Software</h3>
+								</div>
+								<div class="col-sm">
+									<div class="progress myProgressEL">
+										<div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%"></div>
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-sm">
+									<h5 class="mb-3">s</h3>
+								</div>
+								<div class="col-sm">
+									<div class="progress myProgressEL" >
+										<div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%"></div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Embedded Systems -->
+				<div class="col-lg-3 col-md-6 text-center ">
+				   <div onclick="moveEM()" class="service-box mt-5 mx-auto pointer" id="pointerEmbedded" data-toggle="collapse" data-target="#Embedded">
+					<i class="fas fa-4x fa-microchip text-primary mb-3 sr-icons"></i>
+					<h3 class="mb-3" id="textEmbedded">Embedded Systems</h3>
+				  </div>
+					<div id="Embedded" class="collapse">
+						<div class="container">
+							<div class="row">
+								<div class="col-sm">
+									<h5 class="mb-3">Software</h3>
+								</div>
+								<div class="col-sm">
+									<div class="progress myProgressEM" >
+										<div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%"></div>
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-sm">
+									<h5 class="mb-3">s</h3>
+								</div>
+								<div class="col-sm">
+									<div class="progress myProgressEM">
+										<div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%"></div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
             </div>
           </div>
         </div>
       </section>
+						<!-- PROJECT -->
+    <section  class="bg-dark text-white" id="project">
+        <div class="container">
+			<div class="row">
+			  <div class="col-lg-8 mx-auto text-center">
+				<h2 class="section-heading">Project</h2>
+				<hr class="my-4">
+				<p class="mb-5">In progress, not developed<div class="spinner-border"></div>
+</p>
+			  </div>
+			</div>
+        </div>
+      </div>
+    </section>
 
+						<!-- CONTACT -->
     <section  class="bg-dark text-white" id="contact">
       <div class="container">
         <div class="row">
