--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<p>I'm studying the Master's degree in Electrical and Computer Engineering, major area of Automation. </p>
                 <p> My main interest areas are software engineering, embedded systems, programming model for industrial controllers, scada and any related technologies <br></p>
 				<p>Passionate about technology, automative industry, robotics and Programming enthusiast.</p>
-				<p>I'm a self-taught person, always try to learn something new.</p>
+				<p>I'm a self-taught person, always trying to learn something new.</p>
                 
 			</div>
 			<button type="button" class="btn btn-primary btn-xl js-scroll-trigger" data-toggle="collapse" data-target="#demoCollapse">Download CV</button>
