--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
   <head>
+	<meta name="google-site-verification" content="mNSVprHKGZUxq29KNAfSsVZRxIlwJ_eruUFpJfby2ow" />
+
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-139199064-1"></script>
 	<script>
