--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     window.addEventListener("load", function () {
       var load_screen = document.getElementById("loader");
       document.body.removeChild(load_screen);
-     // $('html, body').removeAttr('style')
+      $('html, body').removeAttr('style')
     });
-    //$('html, body').css({ 'overflow': 'hidden', 'height': '100%' })
+    $('html, body').css({ 'overflow': 'hidden', 'height': '100%' })
 
     
     
@@ -47,10 +47,10 @@
 <body id="page-top">
 
   
-  <!--<div class="loader" id="loader">
+  <div class="loader" id="loader">
     <div class="loader--dot"><img src="img/load4.gif"
         style="position:absolute;top:0;left:0;right:0;bottom:0;margin:auto;"> </div>
-  </div>-->
+  </div>
 
 
   <!-- Navigation -->
