--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
   <link rel="stylesheet" href="css/style.css">
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
   <script>
     window.addEventListener("load", function () {
