--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
                 <h5><br>Production Line and SCADA</h5>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/auto2.png" alt="" id="project_img">
+            <img class="img-fluid" src="img/portfolio/auto2.PNG" alt="" id="project_img">
           </div>
         </div>
 
@@ -612,7 +612,7 @@
                 <h5><br>Hydroponic greenhouse</h5>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/estufa.png" alt="" id="project_img">
+            <img class="img-fluid" src="img/portfolio/estufa.PNG" alt="" id="project_img">
           </div>
         </div>
 
@@ -626,7 +626,7 @@
                 <h5><br>Smart Controller</h5>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/smart1.png" alt="" id="project_img">
+            <img class="img-fluid" src="img/portfolio/smart1.PNG" alt="" id="project_img">
           </div>
         </div>
 
@@ -682,7 +682,7 @@
                 <h5><br>Quiz for CMD</h5>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/quiz1.png" alt="" id="project_img">
+            <img class="img-fluid" src="img/portfolio/quiz1.PNG" alt="" id="project_img">
           </div>
         </div>
 
