--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
     
     
   </script>
+  <style>
+    #ulAbout {
+    list-style-image: url('img/start2.PNG');
+  }
+  </style>
 </head>
 
 <body id="page-top">
