--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 <body id="page-top">
 
   
-  <!--<div class="loader" id="loader">
-    <div class="loader--dot"><img src="img/load4.gif"
+ <div class="loader" id="loader">
+    <div class="loader--dot"><img src="img/icon.PNG"
         style="position:absolute;top:0;left:0;right:0;bottom:0;margin:auto;"> </div>
-  </div>-->
+  </div>
 
 
   <!-- Navigation -->
