--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   
  <div class="loader" id="loader">
-    <div class="loader--dot"><img src="img/icon.PNG"
+    <div class="loader--dot"><img src="img/icon.png"
         style="position:absolute;top:0;left:0;right:0;bottom:0;margin:auto;"> </div>
   </div>
 
