--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 <body id="page-top">
 
   
- <div class="loader" id="loader">
+ <!--<div class="loader" id="loader">
     <div class="loader--dot"><img src="img/icon.png"
         style="position:absolute;top:0;left:0;right:0;bottom:0;margin:auto;"> </div>
-  </div>
+  </div>-->
 
 
   <!-- Navigation -->
@@ -818,7 +818,7 @@
                     <li>For that we projected a microcontroller based system with a user friendly mobile application
                       that can show everything about the robot, active sensors, battery level, track number, track
                       timer, change velocity of the robot, start and stop...etc</li>
-                    <li>This robot have 2 modes, automatic mode that follow the line automatic or manual mode, in this
+                    <li>This robot has 2 modes, automatic mode that follow the line automatically or manual mode, in this
                       mode the robot is like a RC car, we can control with a APP.</li>
                     <li>With this project we covered many topics of AVR, like interruptions, USART protocol, PWM, A/D
                       converter to see the battery status and EPROM to record the track. </li>
@@ -875,7 +875,7 @@
                   <ul id="textNormal">
                     <li>Just a simple snake game for CMD, I developed this game in my summer vacation for fun and to
                       improve my skills for C++</li>
-                    <li>This game have have 4 levels and it's funny 😁 </li>
+                    <li>This game have 4 levels and it's funny 😁 </li>
                   </ul>
                   <p><i>Menu designed by Andre Silveira</i></p>
                   <p><i>For more info please check on Github</i></p>
