--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <meta name="description" content="e">
   <meta name="author" content="">
 
+  <meta name="google-site-verification" content="mNSVprHKGZUxq29KNAfSsVZRxIlwJ_eruUFpJfby2ow" />
   <!-- Icon and title-->
   <title>Fábio Morais</title>
   <link rel="shortcut icon" type="image/x-icon" href="./img/icon.png" />
