--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="e">
-  <meta name="author" content="">
-
+  <meta name="description" content="Fábio Morais resume, an eletrical and computer engineering student">
+  <meta name="author" content="Fábio Morais">
+  <meta name="keywords" content="engenheiro eletrotecnico, recem formado, eletric engineering, programadores, web developer, estagio">
   <meta name="google-site-verification" content="mNSVprHKGZUxq29KNAfSsVZRxIlwJ_eruUFpJfby2ow" />
   <!-- Icon and title-->
-  <title>Fábio Morais</title>
+  <title>Fábio Morais - website</title>
   <link rel="shortcut icon" type="image/x-icon" href="./img/icon.png" />
 
 
