--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <!-- Masthead Heading -->
       <h1 class="masthead-heading text-uppercase mb-0" style="font-size: 2.5rem">
         <a style="color:rgb(255, 255, 255); text-decoration: none;" class="typewrite" data-period="2000"
-          data-type='[ "Hi, I&#8217;m Fábio Morais.", "I a&#8217;m an Eletrical and Computer Engineering.", "I Love Programming."]'>
+          data-type='[ "Hi, I&#8217;m Fábio Morais.", "I&#8217;m an Electrical and Computers Engineer.", "I Love Programming."]'>
           <span class="wrap"></span>
         </a>
       </h1>
