--- a/index.html
+++ b/index.html
@@ -697,6 +697,32 @@
             <img class="img-fluid" src="img/portfolio/quiz1.PNG" alt="" id="project_img">
           </div>
         </div>
+         <!-- Portfolio Item 10 -->
+         <div class="col-md-6 col-lg-4 drop-down-show-hide all software">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal10" id="project_img">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+              <div class="portfolio-item-caption-content text-center text-white">
+                <h4><u>Software</u> </h4><br>
+                <i class="fas fa-plus fa-3x"></i>
+                <h5><br>Tic Tac Toe with GUI</h5>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/portfolio/tic1.png" alt="" id="project_img">
+          </div>
+        </div>
+         <!-- Portfolio Item 11 -->
+         <div class="col-md-6 col-lg-4 drop-down-show-hide all wd">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal11" id="project_img">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+              <div class="portfolio-item-caption-content text-center text-white">
+                <h4><u>Web Developer</u> </h4><br>
+                <i class="fas fa-plus fa-3x"></i>
+                <h5><br>Therapy Center Website</h5>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/portfolio/website1.png" alt="" id="project_img">
+          </div>
+        </div>
 
       </div>
       <!-- /.row -->
@@ -1339,6 +1365,115 @@
       </div>
     </div>
   </div>
+
+    <!-- Portfolio Modal 10 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal10" tabindex="-1" role="dialog"
+    aria-labelledby="portfolioModal10Label" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+      <div class="modal-content">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <i class="fas fa-times"></i>
+          </span>
+        </button>
+        <div class="modal-body text-center">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-8">
+                <!-- Portfolio Modal - Title -->
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Tic Tac Toe with GUI</h2>
+                <!-- Icon Divider -->
+                <div class="divider-custom">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon">
+                    <i class="fas fa-code"></i>
+                  </div>
+                  <div class="divider-custom-line"></div>
+                </div>
+                <!-- Portfolio Modal - Image -->
+                <div class='embed-container'><iframe src='https://www.youtube.com/embed/5z3-syMHCu4' frameborder='0'
+                    allowfullscreen></iframe></div>
+                <!-- Portfolio Modal - Text -->
+                <div>
+                  <p id="language"><b>Language:</b> Java and Javafx</p>
+                  <p id="textNormal"><b>Summary:</b></p>
+                  <ul id="textNormal">
+                    <li>A simple tic tac toe with an user interface</li>
+                  </ul>
+                  <p><i>For more info please check on Github</i></p>
+                </div>
+                <button class="btn btn-primary" href="#" data-dismiss="modal">
+                  <i class="fas fa-times fa-fw"></i>
+                  Close Window
+                </button>
+                <button class="btn btn-primary"
+                  onclick="window.open('https://github.com/Fabio-Morais/TicTacToe-with-GUI')">
+                  <i class="fab fa-github"></i>
+                  Open on Github
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Portfolio Modal 11 -->
+  <div class="portfolio-modal modal fade" id="portfolioModal11" tabindex="-1" role="dialog"
+  aria-labelledby="portfolioModal11Label" aria-hidden="true">
+  <div class="modal-dialog modal-xl" role="document">
+    <div class="modal-content">
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">
+          <i class="fas fa-times"></i>
+        </span>
+      </button>
+      <div class="modal-body text-center">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-lg-8">
+              <!-- Portfolio Modal - Title -->
+              <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Therapy Center Website</h2>
+              <!-- Icon Divider -->
+              <div class="divider-custom">
+                <div class="divider-custom-line"></div>
+                <div class="divider-custom-icon">
+                  <i class="fas fa-code"></i>
+                </div>
+                <div class="divider-custom-line"></div>
+              </div>
+              <!-- Portfolio Modal - Image -->
+              <div class='embed-container'><iframe src='https://www.youtube.com/embed/5z3-syMHCu4' frameborder='0'
+                  allowfullscreen></iframe></div>
+              <!-- Portfolio Modal - Text -->
+              <div>
+                <p id="language"><b>Developed with </b> wordpress</p>
+                <p id="textNormal"><b>Summary:</b></p>
+                <ul id="textNormal">
+                  <li>Buy and manage a domain and web hosting</li>
+                  <li>Managed the google business</li>
+                  <li>Build a website with wordpress</li>
+                  <li>SEO optimization</li>
+                  <li>Manage the social media</li>
+                </ul>
+                <p><i>For more info please check on Github</i></p>
+              </div>
+              <button class="btn btn-primary" href="#" data-dismiss="modal">
+                <i class="fas fa-times fa-fw"></i>
+                Close Window
+              </button>
+              <button class="btn btn-primary"
+                onclick="window.open('https://therapy-center.pt/')">
+                <i class="fab fa-github"></i>
+                Open Website
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 
   <!-- Bootstrap core JavaScript -->
