--- a/index.html
+++ b/index.html
@@ -1438,17 +1438,16 @@
               <div class="divider-custom">
                 <div class="divider-custom-line"></div>
                 <div class="divider-custom-icon">
-                  <i class="fas fa-code"></i>
+                  <i class="fas fa-laptop-code"></i>
                 </div>
                 <div class="divider-custom-line"></div>
               </div>
-              <!-- Portfolio Modal - Image -->
-              <div class='embed-container'><iframe src='https://www.youtube.com/embed/5z3-syMHCu4' frameborder='0'
-                  allowfullscreen></iframe></div>
+
               <!-- Portfolio Modal - Text -->
               <div>
                 <p id="language"><b>Developed with </b> wordpress</p>
-                <p id="textNormal"><b>Summary:</b></p>
+                <p id="textNormal">In this project I had a lot of responsibility, I made the whole online presence of this clinic.
+                  <br><b>My responsibilities was:</b></p>
                 <ul id="textNormal">
                   <li>Buy and manage a domain and web hosting</li>
                   <li>Managed the google business</li>
@@ -1456,7 +1455,7 @@
                   <li>SEO optimization</li>
                   <li>Manage the social media</li>
                 </ul>
-                <p><i>For more info please check on Github</i></p>
+                <p><i>For more info please check the website<br><a href= "https://therapy-center.pt/">https://therapy-center.pt/</a></i></p>
               </div>
               <button class="btn btn-primary" href="#" data-dismiss="modal">
                 <i class="fas fa-times fa-fw"></i>
@@ -1464,7 +1463,7 @@
               </button>
               <button class="btn btn-primary"
                 onclick="window.open('https://therapy-center.pt/')">
-                <i class="fab fa-github"></i>
+                <i class="fas fa-laptop-code"></i>
                 Open Website
               </button>
             </div>
