--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
                 <h5><br>Warehouse Manager</h5>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/wm.png" alt="" id="project_img">
+            <img class="img-fluid" src="img/portfolio/wm.PNG" alt="" id="project_img">
           </div>
         </div>
         <!-- Portfolio Item 3 -->
